--- a/blocks/card/__info/card__info.css
+++ b/blocks/card/__info/card__info.css
@@ -1,6 +1,6 @@
 .card__info{
     display: flex;
-    padding: 25px auto;
+    padding: 25px 21px;
     justify-content: space-between;
     align-items: baseline;
     margin: 21px;
