--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,5 +1,5 @@
 .popup__close {
-    background: url(../images/popup__close-icon.svg);
+    background: url(../../../images/popup__close-icon.svg);
     background-size: cover;
     border: 0;
     height: 32px;
