--- a/blocks/card/__info/card__info.css
+++ b/blocks/card/__info/card__info.css
@@ -1,7 +1,8 @@
 .card__info{
     display: flex;
-    padding: 25px 21px;
+    flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
-    margin: 21px;
+    padding: 25px 18px 25px 22px;
+    flex-wrap: nowrap;
 }
