--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,6 +1,13 @@
 .popup__form{
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    margin-bottom: 46px;
+    gap: 48px;
+    margin-top: 54px;
+}
+
+@media screen and (max-width:560px) {
+    .popup__form{
+        gap: 45px;
+        margin-top: 75px;
+    }
 }
