--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,4 +5,8 @@
     top: 0;
     left: 0;
     background: rgba(0, 0, 0,.5);
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
