--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,6 +3,7 @@
     background-position: 50% 50%;
     background-color: transparent;
     background-repeat: no-repeat;
+    border-radius: 2px;
     width: 150px;
     height: 50px;
     border: 2px solid #FFFFFF;
@@ -20,7 +21,6 @@
 @media screen and (max-width:715px) {
     .profile__add-button{
         width: 282px;
-        height: 50px;
         margin: auto;
         background-size: 16px 16px;
     }
