--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,6 +3,7 @@
     background-position: 50% 50%;
     background-color: transparent;
     background-repeat: no-repeat;
+    background-size: 10px 10px;
     width: 24px;
     height: 24px;
     border: 1px solid #FFFFFF;
@@ -20,5 +21,6 @@
     .profile__edit-button{
         width: 18px;
         height: 18px;
+        background-size: 7.5px 7.5px;
     }
 }
