--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,7 @@
     background-color: #000000;
     color: #FFFFFF;
     margin: 0 auto;
-    font-family: 'Inter', 'Arial', sans-serif;;
+    font-family: 'Inter', 'Arial', sans-serif;
 }
 
 @media screen and (max-width:1279px) {
