Проектная работа 6: 1я сдача

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,4 +9,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0;
+    transition: visibility 0s, opacity .2s linear;
 }
