--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -6,5 +6,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    padding-bottom: 10px;
+    margin-bottom: 5px;
+    padding-bottom: 13px;
+    outline: none;
 }
