--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,13 @@
 @import url(../blocks/popup/__input-container/popup__input-container.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
+@import url(../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
 @import url(../blocks/popup/__image-container/popup__image-container.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__description/popup__description.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
+@import url(../blocks/input-profile-name-error/input-profile-name-error.css);
+@import url(../blocks/input-profile-profession-error/input-profile-profession-error.css);
+@import url(../blocks/input-card-name-error/input-card-name-error.css);
+@import url(../blocks/input-card-url-error/input-card-url-error.css);
