--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -10,5 +10,5 @@
     justify-content: center;
     align-items: center;
     opacity: 0;
-    transition: visibility 0s, opacity .2s linear;
+    transition: visibility 0.3s, opacity 0.3s linear;
 }
